@@ -1,8 +1,6 @@
 package com.proriberaapp.ribera.Crosscutting.security;
 
-import com.proriberaapp.ribera.Api.controllers.admin.exception.CustomException;
-import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.ReactiveAuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -12,27 +10,35 @@ import reactor.core.publisher.Mono;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
-@RequiredArgsConstructor
 public class JwtAuthenticationManager implements ReactiveAuthenticationManager {
 
-    private final JwtTokenProvider jwtTokenProvider;
+    @Autowired
+    private final JwtProvider jwtProvider;
+
+    public JwtAuthenticationManager(JwtProvider jwtProvider) {
+        this.jwtProvider = jwtProvider;
+    }
+
     @Override
+    @SuppressWarnings("unchecked")
     public Mono<Authentication> authenticate(Authentication authentication) {
         return Mono.just(authentication)
-                .map(auth -> jwtTokenProvider.getClaimsFromToken(auth.getCredentials().toString()))
-                .log()
-                .onErrorResume(e -> Mono.error(new CustomException(HttpStatus.UNAUTHORIZED, "bad token")))
-                .map(claims -> new UsernamePasswordAuthenticationToken(claims.getSubject(), null,
-                        Stream.of(claims.get("roles"))
-                                .map(role -> (List<Map<String, String>>) role)
-                                .flatMap(role -> role.stream()
-                                        .map(r -> r.get("authority"))
-                                        .map(SimpleGrantedAuthority::new))
-                                .collect(Collectors.toList()))
+                .map(auth -> jwtProvider.getClaimsFromToken(auth.getCredentials().toString()))
+                .onErrorResume(e -> Mono.error(new Throwable("bad token")))
+                .map(claims -> new UsernamePasswordAuthenticationToken(
+                                claims.getSubject(),
+                                null,
+                                Stream.of(claims.get("roles"))
+                                        .map(role -> (List<Map<String, String>>) role)
+                                        .flatMap(role -> role.stream()
+                                                .map(r -> r.get("authority"))
+                                                .map(SimpleGrantedAuthority::new))
+                                        .toList()
+                        )
                 );
     }
+
 }
